<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <LinearLayout style="@style/RowLayout">

                        <TextView
                            style="@style/RowLayoutTitle"
                            android:text="@string/tagline" />

                        <TextView
                            android:id="@+id/tvDetailTagline"
                            style="@style/RowLayoutContent"
                            tools:text="Tagline" />

                    </LinearLayout>


                    <LinearLayout style="@style/RowLayout">

                        <TextView
                            style="@style/RowLayoutTitle"
                            android:text="@string/website" />

                        <TextView
                            android:id="@+id/tvDetailWebsite"
                            style="@style/RowLayoutContent"
                            android:autoLink="web"
                            tools:text="Website" />

                    </LinearLayout>


                    <LinearLayout style="@style/RowLayout">

                        <TextView
                            style="@style/RowLayoutTitle"
                            android:text="@string/budget" />

                        <TextView
                            android:id="@+id/tvDetailBudget"
                            style="@style/RowLayoutContent"
                            tools:text="Budget" />
                    </LinearLayout>


                    <LinearLayout style="@style/RowLayout">

                        <TextView
                            style="@style/RowLayoutTitle"
                            android:text="@string/revenue" />

                        <TextView
                            android:id="@+id/tvDetailRevenue"
                            style="@style/RowLayoutContent"
                            tools:text="Revenue" />

                    </LinearLayout>


                    <LinearLayout style="@style/RowLayout">

                        <TextView
                            style="@style/RowLayoutTitle"
                            android:text="@string/country" />

                        <TextView
                            android:id="@+id/tvDetailCountry"
                            style="@style/RowLayoutContent"
                            tools:text="Country" />

                    </LinearLayout>

                    <LinearLayout style="@style/RowLayout">

                        <TextView
                            style="@style/RowLayoutTitle"
                            android:text="@string/duration" />

                        <TextView
                            android:id="@+id/tvDetailDuration"
                            style="@style/RowLayoutContent"
                            tools:text="0:00" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout style="@style/RowLayout">

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="5"
                    card_view:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvDetailLanguage"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:background="@drawable/circle"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            tools:text="EN" />

                        <TextView
                            android:id="@+id/tvDetailGerene"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="left"
                            android:textSize="@dimen/xsmall_font_size"
                            tools:text="Gerene,Gere,Gerene" />

                    </LinearLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="5"
                    card_view:cardCornerRadius="4dp">

                    <LinearLayout
                        android:id="@+id/llVote"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvDetailVotesPercent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="@dimen/medium_font_size"
                            android:textStyle="bold"
                            tools:text="50%" />

                        <TextView
                            android:id="@+id/tvDetailVotesCount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="@dimen/small_font_size"
                            tools:text="5000 votes" />

                        <TextView
                            android:id="@+id/tvDetailPopularity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="2dp"
                            android:textColor="@color/black"
                            android:textSize="@dimen/small_font_size"
                            tools:text="500" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/synopsis"
                android:textStyle="bold" />


            <LinearLayout style="@style/RowLayout">

                <TextView
                    android:id="@+id/tvDetailDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="@dimen/small_font_size"
                    tools:text="When a wounded Christian Grey tries to entice a cautious Ana Steele back into his life, she demands a new arrangement before she will give him another chance. As the two begin to build trust and find stability, shadowy figures from Christian’s past start to circle the couple, determined to destroy their hopes for a future together." />


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>